Bug 127701 - Zoom factor percentage calculating fault
Summary: Zoom factor percentage calculating fault
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.1.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-09-22 18:41 UTC by Yan Fiz
Modified: 2019-09-26 07:14 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yan Fiz 2019-09-22 18:41:28 UTC
Description:
If you right-click to zoom factor percentage and choose the one of "Entire Page", "Page Width" or "Optimal Width" options twice, it becomes "0%".

Steps to Reproduce:
1. Run Writer
2. Right-click to zoom factor percentage and choose the current options among "Entire Page", "Page Width" or "Optimal Width", or choose one of them twice.

Actual Results:
It becomes "0%"

Expected Results:
It should continue to be the correct percentage.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 6.3.1.2 (x64)
Build ID: b79626edf0065ac373bd1df5c28bd630b4424273
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: tr-TR (en_US); UI-Language: en-US
Calc: CL
Comment 1 BogdanB 2019-09-23 10:58:52 UTC
Working well on
Version: 6.3.1.2 (x64)
Build ID: b79626edf0065ac373bd1df5c28bd630b4424273
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: ro-RO (ro_RO); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2019-09-23 11:36:02 UTC
Thank you for reporting the bug. To be certain the reported issue is not
related to corruption in the user profile, could you please reset your
Libreoffice profile ( https://wiki.documentfoundation.org/UserProfile ) and
re-test?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the issue is still present
Comment 3 Yan Fiz 2019-09-23 15:34:42 UTC
Hello,

I deleted whole LibreOffice folder in $Env:APPDATA and made a fresh test with zero-kilometer settings. I reproduced my issue :(

https://i.postimg.cc/G3Kb03HB/1-Run-Writer.png

https://i.postimg.cc/pXdRPNFs/2-Choose-Page-Width.png

https://i.postimg.cc/jdkK586t/3-Choose-Page-Width-again.png

Kind regards.
Comment 4 Oliver Brinzing 2019-09-23 17:14:08 UTC
reproducible with:

Version: 6.3.1.2 (x64)
Build ID: b79626edf0065ac373bd1df5c28bd630b4424273
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-US
Calc: 

if initial zoom e.g. is 100%, select "Page Width" *twice*.

but *not* reproducible with:

Version: 6.2.7.1 (x64)
Build-ID: 23edc44b61b830b7d749943e020e96f5a7df63bf
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc:
Comment 5 raal 2019-09-24 03:45:08 UTC
This seems to have begun at the below commit.
Adding Cc: to Noel Grandin; Could you possibly take a look at this one? Thanks
 a630d297b1ef1039d246a209897a724483731d40 is the first bad commit
commit a630d297b1ef1039d246a209897a724483731d40
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Fri Aug 16 12:47:30 2019 -0700

    source c53f3f8f58f55d0978fb968446975856d72a52f8

author	Noel Grandin <noel.grandin@collabora.co.uk>	2019-08-16 15:33:15 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2019-08-16 21:40:17 +0200
commit c53f3f8f58f55d0978fb968446975856d72a52f8 (patch)
tree 2ea9c7dc98b4e50e6af7b96853d7288a829f6438
parent db7701a3072117e9808e73bc3a071b236daacfc5 (diff)
tdf#126819 Can't retrieve the mouse position written in the statusbar
Comment 6 Commit Notification 2019-09-25 13:50:37 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e39ddbdb5b6f49e3585a03444dce077709b855e6

tdf#127701 Zoom factor percentage calculating fault

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-09-25 18:58:22 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/5e6d6c21be77ac9d05b306dde041a1ee1d1d552d

tdf#127701 Zoom factor percentage calculating fault

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2019-09-26 07:14:39 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 186d36a7036462ae641b35004b4ffba3eeeca46f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Noel, thanks for fixing this issue!